--- a/game.css
+++ b/game.css
@@ -6,7 +6,7 @@
 
     body{
         height: 100vh;
-    
+    position: relative;;
         display: flex;
         justify-content: center;
         align-items: center;
@@ -93,4 +93,14 @@
         text-align: center;
         margin-top: 100px;
         padding: 50px;
+    }
+
+    #Result{
+
+
+        position: absolute;
+        align-items: center;
+        top: 50%;
+        left: 40%;
+        font-size: 40px;
     }
